--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,11 +142,11 @@ h1 {
 }
 
 .kitHolder1{
-    background-image: url(../images/icons-bg.svg);
-    background-position: center;
-    background-size: cover;
-    height: 400px;
-    width: 150px;
+    background-image: url(../images/hero-icon-bg.svg);
+    background-position: right;
+    background-size: auto;
+    height: 450px;
+    width: 120px;
 }
 
 .kitHolder {
