--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,7 +82,7 @@ nav {
 
 .fontSection{
     width: 100%;
-    height: 200px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -149,4 +149,28 @@ h1 {
     height: 800px;
     width: 100%;
     background: #fff;
+}
+
+.startbtn {
+    margin-top: 50px;
+}
+button {
+    padding: 20px 40px;
+    border: 2px solid #183153;
+    border-radius: 10px;
+    font-weight: 800;
+    font-size: 15px;
+    margin-inline: 20px;
+    color: #183153;
+    background-color: #fff;
+    transition: 0.15s;
+    cursor: pointer;
+}
+
+.startbtn .btnn {
+    background-color: #f59f00;
+}
+
+button:hover, .btnn:hover{
+    background-color: #bac8ff;
 }
