--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 
 main{
     width: 100%;
-    height: 800px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     padding-inline: 8%;
@@ -141,14 +141,23 @@ h1 {
     background-image: url(../images/icons-bg.svg);
     background-position: center;
     background-size: cover;
-    height: 800px;
+    height: 400px;
     width: 150px;
 }
 
 .kitHolder {
-    height: 800px;
+    height: 400px;
     width: 100%;
     background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.kitHolder img {
+    border-radius: 10px;
+    width: 80%;
+    height: auto;
 }
 
 .startbtn {
