--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,7 @@ main{
     height: 550px;
     display: flex;
     flex-direction: column;
-    padding-inline: 8%;
+    padding-inline: 10%;
 }
 .profileimg {
     width: 40px;
@@ -25,7 +25,8 @@ main{
 header {
     display: flex;
     max-width: 100%;
-    max-height: 80px;
+    height: 90px;
+    padding-bottom: 10px;
 }
 
 .logo .fa-solid {
@@ -38,7 +39,8 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80px;
+    height: 90px;
+    padding-bottom: 10px;
 }
 
 .navigation
@@ -112,7 +114,8 @@ nav {
     width: 580px;
     font-size: 20px;
     text-align: center;
-    line-height: 24px;
+    line-height: 30px;
+    margin-bottom: 20px;
 }
 
 .fontSection span {
@@ -129,6 +132,7 @@ h1 {
     width: 600px;
     font-family: 'Jost', 'Roboto',sans-serif;
     margin-bottom: 40px;
+    margin-top: 50px;
 }
 
 
@@ -139,6 +143,7 @@ h1 {
     height: 800px;
     background-position: center;
     background-size: cover;
+    margin-top: 50px;
 }
 
 .kitHolder1{
